# VoiceLead-Ai

./: .gitignore  CHECKPOINT_1_REPORT.md  README.md  main.py  pyproject.toml  test_db.py  test_engine.py  test_integration.py  test_trigger.py
app/: db_supabase.py  engine.py  interfaces.py  mocks.py  services.py  streaming_stt.py  streaming_tts.py  tts_deepgram.py
static/: dashboard.html  index.html  script.js
